# PhospheneStreamer

./: .replit  README.md  pyproject.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/phosphene-sim/: edge_model.onnx  main.py  requirements.txt
artifacts/phosphene-sim/.replit-artifact/: artifact.edit.toml
artifacts/phosphene-sim/src/: __init__.py  electrodes.py  firmware_sim.py  main.py  packets.py
artifacts/phosphene-sim/static/: index.html  script.js  style.css
artifacts/phosphene-sim/tests/: test_sim.py
attached_assets/: Pasted-Build-a-small-minimal-credit-virtual-implant-firmware-s_1783745496213.txt  Pasted-rompt-Build-a-very-small-minimal-credit-virtual-implant_1783745830187.txt
