[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.0",
]
